--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -116,6 +116,7 @@
 @import "./views/dialogs/_ModalWidgetDialog.scss";
 @import "./views/dialogs/_NewSessionReviewDialog.scss";
 @import "./views/dialogs/_PollCreateDialog.scss";
+@import "./views/dialogs/_ReactionsDialog.scss";
 @import "./views/dialogs/_RegistrationEmailPromptDialog.scss";
 @import "./views/dialogs/_RoomSettingsDialog.scss";
 @import "./views/dialogs/_RoomSettingsDialogBridges.scss";
