--- a/res/css/views/context_menus/_MessageContextMenu.scss
+++ b/res/css/views/context_menus/_MessageContextMenu.scss
@@ -113,4 +113,8 @@ limitations under the License.
     .mx_MessageContextMenu_jumpToEvent::before {
         mask-image: url('$(res)/img/element-icons/child-relationship.svg');
     }
+
+    .mx_MessageContextMenu_iconEmoji::before {
+        mask-image: url('$(res)/img/element-icons/room/composer/emoji.svg');
+    }
 }
