--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -17,9 +17,6 @@ limitations under the License.
 .mx_AccessSecretStorageDialog_reset {
     position: relative;
     padding-left: 24px; // 16px icon + 8px padding
-    margin-top: 7px; // vertical alignment to buttons
-    margin-bottom: 7px; // space between the buttons and the text when float is activated
-    text-align: left;
 
     &::before {
         content: "";
@@ -119,4 +116,29 @@ limitations under the License.
 
 .mx_AccessSecretStorageDialog_recoveryKeyEntry_fileInput {
     display: none;
+}
+
+.mx_AccessSecretStorageDialog_primaryContainer {
+    .mx_Dialog_buttons {
+        text-align: initial;
+        display: flex;
+        flex-flow: column;
+        gap: 14px;
+
+        .mx_Dialog_buttons_additive {
+            float: none;
+        }
+
+        .mx_Dialog_buttons_row {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            margin-left: auto;
+            padding-left: 24px; // See mx_AccessSecretStorageDialog_reset above
+
+            button {
+                margin: 0 !important; // override rules on common.scss
+            }
+        }
+    }
 }
