--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -14,27 +14,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-.mx_AccessSecretStorageDialog_reset {
-    position: relative;
-    padding-inline-start: $spacing-24; // 16px icon + 8px padding
-
-    &::before {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        height: 16px;
-        width: 16px;
-        left: 0;
-        top: 2px; // alignment
-        background-image: url("$(res)/img/element-icons/warning-badge.svg");
-        background-size: contain;
-    }
-
-    .mx_AccessSecretStorageDialog_reset_link {
-        color: $alert;
-    }
-}
-
 .mx_AccessSecretStorageDialog_titleWithIcon::before {
     content: '';
     display: inline-block;
@@ -120,6 +99,8 @@ limitations under the License.
 
 .mx_AccessSecretStorageDialog_primaryContainer {
     .mx_Dialog_buttons {
+        $spacingStart: $spacing-24;  // 16px icon + 8px padding
+
         text-align: initial;
         display: flex;
         flex-flow: column;
@@ -127,11 +108,32 @@ limitations under the License.
 
         .mx_Dialog_buttons_additive {
             float: none;
+
+            .mx_AccessSecretStorageDialog_reset {
+                position: relative;
+                padding-inline-start: $spacingStart;
+
+                &::before {
+                    content: "";
+                    display: inline-block;
+                    position: absolute;
+                    height: 16px;
+                    width: 16px;
+                    left: 0;
+                    top: 2px; // alignment
+                    background-image: url("$(res)/img/element-icons/warning-badge.svg");
+                    background-size: contain;
+                }
+
+                .mx_AccessSecretStorageDialog_reset_link {
+                    color: $alert;
+                }
+            }
         }
 
         .mx_Dialog_buttons_row {
             gap: $spacing-16; // TODO: needs normalization
-            padding-inline-start: $spacing-24; // See mx_AccessSecretStorageDialog_reset above
+            padding-inline-start: $spacingStart;
 
             button {
                 margin: 0 !important; // override rules on common.scss
