--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -41,20 +41,20 @@ limitations under the License.
     mask-image: url('$(res)/img/feather-customised/secure-phrase.svg');
 }
 
-.mx_AccessSecretStorageDialog_keyStatus {
-    height: 30px;
-}
-
+.mx_AccessSecretStorageDialog_primaryContainer {
 .mx_AccessSecretStorageDialog_passPhraseInput {
     width: 300px;
     border: 1px solid $accent;
     border-radius: 5px;
 }
 
+.mx_AccessSecretStorageDialog_keyStatus {
+    height: 30px;
+}
+
 .mx_AccessSecretStorageDialog_recoveryKeyEntry {
     display: flex;
     align-items: center;
-}
 
 .mx_AccessSecretStorageDialog_recoveryKeyEntry_textInput {
     flex-grow: 1;
@@ -62,6 +62,11 @@ limitations under the License.
 
 .mx_AccessSecretStorageDialog_recoveryKeyEntry_entryControlSeparatorText {
     margin: $spacing-16;
+}
+
+.mx_AccessSecretStorageDialog_recoveryKeyEntry_fileInput {
+    display: none;
+}
 }
 
 .mx_AccessSecretStorageDialog_recoveryKeyFeedback {
@@ -76,29 +81,26 @@ limitations under the License.
         mask-size: 20px;
         margin-inline-end: 5px; // TODO: spacing variable
     }
-}
 
-.mx_AccessSecretStorageDialog_recoveryKeyFeedback_valid {
+&.mx_AccessSecretStorageDialog_recoveryKeyFeedback_valid {
     color: $accent;
+
     &::before {
         mask-image: url('$(res)/img/feather-customised/check.svg');
         background-color: $accent;
     }
 }
 
-.mx_AccessSecretStorageDialog_recoveryKeyFeedback_invalid {
+&.mx_AccessSecretStorageDialog_recoveryKeyFeedback_invalid {
     color: $alert;
+
     &::before {
         mask-image: url('$(res)/img/feather-customised/x.svg');
         background-color: $alert;
     }
 }
-
-.mx_AccessSecretStorageDialog_recoveryKeyEntry_fileInput {
-    display: none;
 }
 
-.mx_AccessSecretStorageDialog_primaryContainer {
     .mx_Dialog_buttons {
         $spacingStart: $spacing-24;  // 16px icon + 8px padding
 
