--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -15,7 +15,8 @@ limitations under the License.
 */
 
 .mx_AccessSecretStorageDialog {
-.mx_AccessSecretStorageDialog_titleWithIcon::before {
+.mx_AccessSecretStorageDialog_titleWithIcon {
+&::before {
     content: '';
     display: inline-block;
     width: 24px;
@@ -26,19 +27,20 @@ limitations under the License.
     background-color: $primary-content;
 }
 
-.mx_AccessSecretStorageDialog_resetBadge::before {
+&.mx_AccessSecretStorageDialog_resetBadge::before {
     // The image isn't capable of masking, so we use a background instead.
     background-image: url("$(res)/img/element-icons/warning-badge.svg");
     background-size: 24px;
     background-color: transparent;
 }
 
-.mx_AccessSecretStorageDialog_secureBackupTitle::before {
+&.mx_AccessSecretStorageDialog_secureBackupTitle::before {
     mask-image: url('$(res)/img/feather-customised/secure-backup.svg');
 }
 
-.mx_AccessSecretStorageDialog_securePhraseTitle::before {
+&.mx_AccessSecretStorageDialog_securePhraseTitle::before {
     mask-image: url('$(res)/img/feather-customised/secure-phrase.svg');
+}
 }
 
 .mx_AccessSecretStorageDialog_primaryContainer {
