--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -143,6 +143,10 @@ limitations under the License.
 .mx_InviteDialog_roomTile {
     cursor: pointer;
     padding: 5px 10px;
+    display: grid;
+    gap: 7px 10px;
+    grid-template-columns: min-content auto auto; // avatarStack, nameStack, time
+    align-items: center;
 
     &:hover {
         background-color: $header-panel-bg-color;
@@ -191,21 +195,20 @@ limitations under the License.
     }
 
     .mx_InviteDialog_roomTile_nameStack {
-        display: inline-block;
         overflow: hidden;
+        display: flex;
+        flex-flow: column;
     }
 
     .mx_InviteDialog_roomTile_name {
         font-weight: 600;
         font-size: $font-14px;
         color: $primary-content;
-        margin-left: 7px;
     }
 
     .mx_InviteDialog_roomTile_userId {
         font-size: $font-12px;
         color: $muted-fg-color;
-        margin-left: 7px;
     }
 
     .mx_InviteDialog_roomTile_name,
@@ -219,8 +222,6 @@ limitations under the License.
         text-align: right;
         font-size: $font-12px;
         color: $muted-fg-color;
-        float: right;
-        line-height: $font-36px; // Height of the avatar to keep the time vertically aligned
     }
 
     .mx_InviteDialog_roomTile_highlight {
