Set padding inside of name stack
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -198,6 +198,7 @@ limitations under the License.
         overflow: hidden;
         display: flex;
         flex-flow: column;
+        padding-inline-end: 7px;
     }
 
     .mx_InviteDialog_roomTile_name {
