Replace text-align with margin
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/dialogs/_InviteDialog.scss
+++ b/res/css/views/dialogs/_InviteDialog.scss
@@ -218,7 +218,7 @@ limitations under the License.
     }
 
     .mx_InviteDialog_roomTile_time {
-        text-align: right;
+        margin-inline-start: auto;
         width: max-content;
         font-size: $font-12px;
         color: $muted-fg-color;
