--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -193,10 +193,7 @@ limitations under the License.
     }
 
     .mx_UserInfo_field {
-        cursor: pointer;
-        color: $accent;
         line-height: $font-16px;
-        margin: 8px 0;
 
         &.mx_UserInfo_destructive {
             color: $alert;
@@ -228,7 +225,11 @@ limitations under the License.
         padding-bottom: 0;
 
         > :not(h3) {
-            margin-left: 8px;
+            margin-inline-start: 8px;
+            display: flex;
+            flex-flow: column;
+            align-items: flex-start;
+            row-gap: 8px;
         }
     }
 
@@ -250,7 +251,7 @@ limitations under the License.
 
             .mx_UserInfo_device_name {
                 flex: 1;
-                margin-right: 5px;
+                margin: 0 5px;
                 word-break: break-word;
             }
         }
@@ -259,19 +260,16 @@ limitations under the License.
         .mx_E2EIcon {
             // don't squeeze
             flex: 0 0 auto;
-            margin: 2px 5px 0 0;
+            margin: 0;
             width: 12px;
             height: 12px;
         }
 
         .mx_UserInfo_expand {
-            display: flex;
-            margin-top: 11px;
+            align-items: center;
+            column-gap: 5px; // cf: mx_UserInfo_device_name
+            margin-bottom: 11px;
         }
-    }
-
-    .mx_AccessibleButton.mx_AccessibleButton_hasKind {
-        padding: 8px 18px;
     }
 }
 
