--- a/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
+++ b/res/css/views/dialogs/security/_AccessSecretStorageDialog.scss
@@ -130,10 +130,7 @@ limitations under the License.
         }
 
         .mx_Dialog_buttons_row {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 8px;
-            margin-left: auto;
+            gap: 16px; // TODO: needs normalization
             padding-left: 24px; // See mx_AccessSecretStorageDialog_reset above
 
             button {
