.mx_UserInfo_profileField under .mx_UserInfo_memberDetails
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -176,7 +176,8 @@ limitations under the License.
         }
     }
 
-    .mx_UserInfo_memberDetails .mx_UserInfo_profileField {
+    .mx_UserInfo_memberDetails {
+    .mx_UserInfo_profileField {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -194,6 +195,7 @@ limitations under the License.
         .mx_Field {
             margin: 0;
         }
+    }
     }
 
     .mx_UserInfo_field {
