reorganize structure of .mx_UserInfo_avatar - 1
.mx_UserInfo_avatar > div > div *

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -110,15 +110,15 @@ limitations under the License.
         and not a % of the parent height. */
         padding-top: 100%;
         position: relative;
-    }
 
-    .mx_UserInfo_avatar > div > div * {
+    * {
         border-radius: 100%;
         position: absolute;
         top: 0;
         left: 0;
         width: 100% !important;
         height: 100% !important;
+    }
     }
 
     .mx_UserInfo_avatar .mx_BaseAvatar_initial {
