--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -116,11 +116,8 @@ limitations under the License.
         width: 100% !important;
         height: 100% !important;
     }
-    }
-    }
-    }
 
-    .mx_UserInfo_avatar .mx_BaseAvatar_initial {
+    .mx_BaseAvatar_initial {
         z-index: 1;
         display: flex;
         align-items: center;
@@ -132,7 +129,7 @@ limitations under the License.
         transition: font-size 0.5s;
     }
 
-    .mx_UserInfo_avatar .mx_BaseAvatar {
+    .mx_BaseAvatar {
         .mx_BaseAvatar_initial + .mx_BaseAvatar_image {
             cursor: default;
         }
@@ -140,6 +137,9 @@ limitations under the License.
         &.mx_BaseAvatar_image {
             cursor: zoom-in;
         }
+    }
+    }
+    }
     }
 
     h3 {
