--- a/res/css/views/right_panel/_UserInfo.scss
+++ b/res/css/views/right_panel/_UserInfo.scss
@@ -117,6 +117,11 @@ limitations under the License.
         height: 100% !important;
     }
 
+    .mx_BaseAvatar {
+        &.mx_BaseAvatar_image {
+            cursor: zoom-in;
+        }
+
     .mx_BaseAvatar_initial {
         z-index: 1;
         display: flex;
@@ -127,16 +132,11 @@ limitations under the License.
         font-size: 6rem !important;
         width: 100% !important;
         transition: font-size 0.5s;
-    }
 
-    .mx_BaseAvatar {
-        .mx_BaseAvatar_initial + .mx_BaseAvatar_image {
+        & + .mx_BaseAvatar_image {
             cursor: default;
         }
-
-        &.mx_BaseAvatar_image {
-            cursor: zoom-in;
-        }
+    }
     }
     }
     }
