--- a/res/css/structures/_ViewSource.scss
+++ b/res/css/structures/_ViewSource.scss
@@ -39,5 +39,8 @@ limitations under the License.
 
 .mx_ViewSource_details {
     margin-top: 0.8em;
+}
+
+.mx_ViewSource_container {
     margin-right: 1.125em;
 }
