--- a/res/css/components/views/beacon/_BeaconStatus.scss
+++ b/res/css/components/views/beacon/_BeaconStatus.scss
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-.mx_BeaconStatusChin {
+.mx_BeaconStatus {
     box-sizing: border-box;
     position: absolute;
     bottom: 0;
@@ -32,17 +32,17 @@ limitations under the License.
     font-size: $font-12px;
 }
 
-.mx_BeaconStatusChin_Loading,
-.mx_BeaconStatusChin_Stopped {
+.mx_BeaconStatus_Loading,
+.mx_BeaconStatus_Stopped {
     --color: $tertiary-content;
 }
 
-.mx_BeaconStatusChin_Active,
-.mx_BeaconStatusChin_Error {
+.mx_BeaconStatus_Active,
+.mx_BeaconStatus_Error {
     --color: $primary-content;
 }
 
-.mx_BeaconStatusChin_icon {
+.mx_BeaconStatus_icon {
     height: 32px;
     width: 32px;
 
@@ -50,14 +50,14 @@ limitations under the License.
     margin-right: $spacing-8;
 }
 
-.mx_BeaconStatusChin_activeDescription {
+.mx_BeaconStatus_activeDescription {
     flex: 1;
     display: flex;
     flex-direction: column;
     line-height: $font-14px;
 }
 
-.mx_BeaconStatusChin_stopButton {
+.mx_BeaconStatus_stopButton {
     // override button link_inline styles
     color: $alert !important;
     font-weight: $font-semi-bold !important;
