--- a/res/css/components/views/beacon/_BeaconStatus.scss
+++ b/res/css/components/views/beacon/_BeaconStatus.scss
@@ -19,6 +19,9 @@ limitations under the License.
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    
+    box-sizing: border-box;
+    padding: $spacing-8;
 
     box-sizing: border-box;
     padding: $spacing-8;
