render time differently for own beacon
Signed-off-by: Kerry Archibald <kerrya@element.io>

--- a/res/css/components/views/beacon/_BeaconStatus.scss
+++ b/res/css/components/views/beacon/_BeaconStatus.scss
@@ -61,3 +61,7 @@ limitations under the License.
     font-weight: $font-semi-bold !important;
     text-transform: uppercase;
 }
+
+.mx_BeaconStatus_expiryTime {
+    color: $secondary-content;
+}
