--- a/res/css/views/voip/_VideoLobby.scss
+++ b/res/css/views/voip/_VideoLobby.scss
@@ -16,13 +16,13 @@ limitations under the License.
 
 .mx_VideoLobby {
     height: 100%;
-    padding: 12px;
+    padding: $spacing-12;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 44px;
+    gap: $spacing-40;
 
     .mx_VideoLobby_preview {
         position: relative;
@@ -40,7 +40,7 @@ limitations under the License.
         align-items: center;
 
         .mx_BaseAvatar {
-            margin: 20px;
+            margin: $spacing-20;
 
             // Override the explicit dimensions on the element so that this gets sized responsively
             width: unset !important;
@@ -66,13 +66,12 @@ limitations under the License.
             bottom: 0;
             left: 0;
             right: 0;
-            height: 66px;
 
             background-color: rgba($background, 0.9);
 
             display: flex;
             justify-content: center;
-            gap: 24px;
+            gap: $spacing-24;
 
             .mx_VideoLobby_deviceButtonWrapper {
                 position: relative;
