--- a/res/css/structures/_VideoRoomView.scss
+++ b/res/css/structures/_VideoRoomView.scss
@@ -20,14 +20,18 @@ limitations under the License.
 
     display: flex;
     flex-direction: column;
-    padding: $container-gap-width;
-    padding-right: calc($container-gap-width / 2);
+    margin: $container-gap-width;
+    margin-right: calc($container-gap-width / 2);
+
+    background-color: $header-panel-bg-color;
+    padding-top: 33px; // to match the right panel chat heading
+    border: 8px solid $header-panel-bg-color;
+    border-radius: 8px;
 
     .mx_AppTile {
         width: auto;
         height: 100%;
-        padding-top: 33px; // to match the right panel chat heading
-        border-radius: 8px;
+        border: none;
     }
 
     // While the lobby is shown, the widget needs to stay loaded but hidden in the background
