--- a/res/css/views/voip/_VideoLobby.scss
+++ b/res/css/views/voip/_VideoLobby.scss
@@ -17,7 +17,7 @@ limitations under the License.
 .mx_VideoLobby {
     height: 100%;
     padding: $spacing-12;
-    background-color: $background;
+    background-color: $video-lobby-background;
     border-radius: 8px;
 
     display: flex;
@@ -31,7 +31,7 @@ limitations under the License.
         width: 100%;
         max-width: 800px;
         aspect-ratio: 1.5;
-        background-color: $system;
+        background-color: $video-lobby-system;
 
         border-radius: 20px;
         overflow: hidden;
@@ -69,7 +69,7 @@ limitations under the License.
             left: 0;
             right: 0;
 
-            background-color: rgba($background, 0.9);
+            background-color: rgba($video-lobby-background, 0.9);
 
             display: flex;
             justify-content: center;
@@ -85,7 +85,7 @@ limitations under the License.
                     width: $size;
                     height: $size;
 
-                    background-color: $primary-content;
+                    background-color: $video-lobby-primary-content;
                     border-radius: calc($size / 2);
 
                     &::before {
@@ -94,7 +94,7 @@ limitations under the License.
                         mask-repeat: no-repeat;
                         mask-size: 20px;
                         mask-position: center;
-                        background-color: $system;
+                        background-color: $video-lobby-system;
                         height: 100%;
                         width: 100%;
                     }
@@ -117,7 +117,7 @@ limitations under the License.
                     width: $size;
                     height: $size;
 
-                    background-color: $primary-content;
+                    background-color: $video-lobby-primary-content;
                     border-radius: calc($size / 2);
 
                     &::before {
@@ -126,7 +126,7 @@ limitations under the License.
                         mask-image: url('$(res)/img/feather-customised/chevron-down.svg');
                         mask-size: $size;
                         mask-position: center;
-                        background-color: $system;
+                        background-color: $video-lobby-system;
                         height: 100%;
                         width: 100%;
                     }
@@ -134,10 +134,10 @@ limitations under the License.
 
                 &.mx_VideoLobby_deviceButtonWrapper_active {
                     .mx_VideoLobby_deviceButton, .mx_VideoLobby_deviceListButton {
-                        background-color: $system;
+                        background-color: $video-lobby-system;
 
                         &::before {
-                            background-color: $primary-content;
+                            background-color: $video-lobby-primary-content;
                         }
                     }
 
