--- a/res/css/views/elements/_CopyableText.scss
+++ b/res/css/views/elements/_CopyableText.scss
@@ -18,11 +18,6 @@ limitations under the License.
 .mx_CopyableText {
     display: flex;
     justify-content: space-between;
-    border-radius: 5px;
-    border: solid 1px $light-fg-color;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 10px;
     width: max-content;
     max-width: 100%;
 
@@ -45,4 +40,12 @@ limitations under the License.
             background-repeat: no-repeat;
         }
     }
+}
+
+.mx_CopyableText_border {
+    border-radius: 5px;
+    border: solid 1px $light-fg-color;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 10px;
 }
