Ask to refresh timeline when historical messages are imported (MSC2716)
Associated matrix-js-sdk PR: https://github.com/matrix-org/matrix-js-sdk/pull/2282

--- a/res/css/structures/_RoomStatusBar.scss
+++ b/res/css/structures/_RoomStatusBar.scss
@@ -145,6 +145,12 @@ limitations under the License.
                     mask-image: url('$(res)/img/element-icons/retry.svg');
                 }
             }
+
+            &.mx_RoomStatusBar_refreshTimelineBtn {
+                &::before {
+                    mask-image: url('$(res)/img/element-icons/retry.svg');
+                }
+            }
         }
 
         .mx_InlineSpinner {
