--- a/res/css/views/elements/_CopyableText.scss
+++ b/res/css/views/elements/_CopyableText.scss
@@ -21,6 +21,14 @@ limitations under the License.
     width: max-content;
     max-width: 100%;
 
+    &.mx_CopyableText_border {
+        border-radius: 5px;
+        border: solid 1px $light-fg-color;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        padding: 10px;
+    }
+
     .mx_CopyableText_copyButton {
         flex-shrink: 0;
         width: 20px;
@@ -42,10 +50,3 @@ limitations under the License.
     }
 }
 
-.mx_CopyableText_border {
-    border-radius: 5px;
-    border: solid 1px $light-fg-color;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 10px;
-}
