--- a/res/themes/dark/css/_dark.scss
+++ b/res/themes/dark/css/_dark.scss
@@ -7,6 +7,7 @@ $quaternary-content: #6F7882;
 $quinary-content: #394049;
 
 $system: #21262C;
+$system-transparent: rgba($system, 0.0); // XXX: workaround for Safari 15.3 linear-gradient bug
 $background: #15191E;
 
 $panel-base: #8D97A5; // This color is not intended for use in the app
