--- a/res/themes/light-custom/css/_custom.scss
+++ b/res/themes/light-custom/css/_custom.scss
@@ -27,6 +27,7 @@ $tertiary-content: var(--tertiary-content, $tertiary-content);
 $quaternary-content: var(--quaternary-content, $quaternary-content);
 $quinary-content: var(--quinary-content, $quinary-content);
 $system: var(--system, $system);
+$system-transparent: rgba($system, 0.0); // XXX: workaround for Safari 15.3 linear-gradient bug
 $background: var(--background, $background);
 $panels: rgba($system, 0.9);
 $panel-base: var(--panel-base, $tertiary-content); // This color is not intended for use in the app
