--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -39,6 +39,7 @@ limitations under the License.
         overflow: hidden;
         position: relative; // offset parent for jump to bottom button
         flex: 1;
+        border-radius: 8px;
     }
 
     .mx_AutoHideScrollbar {
