Use SVG for Tag delete button

--- a/res/css/views/elements/_TagComposer.scss
+++ b/res/css/views/elements/_TagComposer.scss
@@ -80,9 +80,8 @@ limitations under the License.
         background: $system;
         position: relative;
 
-        &::before {
-            content: "✕";
-            font-size: 0.7em;
+        svg {
+            width: .5em;
             vertical-align: middle;
         }
     }
