--- a/res/css/views/voip/_VideoLobby.scss
+++ b/res/css/views/voip/_VideoLobby.scss
@@ -18,6 +18,7 @@ limitations under the License.
     min-height: 0;
     flex-grow: 1;
     padding: $spacing-12;
+    color: $video-lobby-primary-content;
     background-color: $video-lobby-background;
     border-radius: 8px;
 
@@ -25,7 +26,16 @@ limitations under the License.
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: $spacing-40;
+    gap: $spacing-32;
+
+    .mx_FacePile {
+        width: fit-content;
+        margin: $spacing-8 auto 0;
+
+        .mx_FacePile_faces .mx_BaseAvatar_image {
+            border-color: $video-lobby-background;
+        }
+    }
 
     .mx_VideoLobby_preview {
         position: relative;
