Replace "600" with $font-semi-bold
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/dialogs/_RoomSettingsDialogBridges.scss
+++ b/res/css/views/dialogs/_RoomSettingsDialogBridges.scss
@@ -100,7 +100,7 @@ limitations under the License.
 
                 .mx_RoomSettingsDialog_workspace_channel_details {
                     color: $primary-content;
-                    font-weight: 600;
+                    font-weight: $font-semi-bold;
 
                     .mx_RoomSettingsDialog_channel {
                         margin-inline-start: 5px;
