--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -1005,6 +1005,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
     }
 
     .mx_EventTile[data-layout=group] {
+        $spacing-start: 48px;
         width: 100%;
 
         .mx_EventTile_content,
@@ -1014,7 +1015,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         .mx_MPollBody,
         .mx_ReplyChain_wrapper,
         .mx_ReactionsRow {
-            margin-left: 48px;
+            margin-left: $spacing-start;
             margin-right: 8px;
 
             .mx_EventTile_content,
@@ -1048,10 +1049,14 @@ $threadInfoLineHeight: calc(2 * $font-12px);
                 }
             }
         }
+
+        .mx_EventTile_mediaLine {
+            padding-inline-start: $spacing-start;
+        }
     }
 
     .mx_EventTile_mediaLine {
-        padding-left: 36px !important;
+        padding-left: 36px;
         padding-right: 50px;
 
         .mx_MImageBody {
