--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -65,12 +65,12 @@ limitations under the License.
             padding-left: 36px;
             padding-right: 36px;
         }
-    }
 
-    .mx_EventTile:not([data-layout="bubble"]) .mx_ThreadInfo {
-        margin-left: 36px;
-        margin-right: 0;
-        max-width: min(calc(100% - 36px), 600px);
+        .mx_ThreadInfo {
+            margin-left: 36px;
+            margin-right: 0;
+            max-width: min(calc(100% - 36px), 600px);
+        }
     }
 
     .mx_GroupLayout .mx_EventTile > .mx_DisambiguatedProfile {
