--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -71,15 +71,15 @@ limitations under the License.
             margin-right: 0;
             max-width: min(calc(100% - 36px), 600px);
         }
+
+        .mx_EventTile_avatar {
+            top: 12px;
+            left: -3px;
+        }
     }
 
     .mx_GroupLayout .mx_EventTile > .mx_DisambiguatedProfile {
         margin-left: 36px;
-    }
-
-    .mx_EventTile:not([data-layout="bubble"]) .mx_EventTile_avatar {
-        top: 12px;
-        left: -3px;
     }
 
     .mx_CallEvent_wrapper {
