--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -81,6 +81,10 @@ limitations under the License.
             right: -4px;
             left: auto;
         }
+
+        .mx_EventTile_msgOption {
+            margin-right: 2px;
+        }
     }
 
     .mx_GroupLayout .mx_EventTile > .mx_DisambiguatedProfile {
@@ -93,10 +97,6 @@ limitations under the License.
         .mx_CallEvent {
             margin: 4px;
         }
-    }
-
-    .mx_EventTile:not([data-layout="bubble"]) .mx_EventTile_msgOption {
-        margin-right: 2px;
     }
 
     .mx_GenericEventListSummary:not([data-layout=bubble]) .mx_EventTile_line,
