--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -85,6 +85,16 @@ limitations under the License.
         .mx_EventTile_msgOption {
             margin-right: 2px;
         }
+
+        &.mx_EventTile_info {
+            .mx_EventTile_line {
+                padding-left: 36px;
+            }
+
+            .mx_EventTile_avatar {
+                left: 18px;
+            }
+        }
     }
 
     .mx_GroupLayout .mx_EventTile > .mx_DisambiguatedProfile {
@@ -110,14 +120,6 @@ limitations under the License.
 
     .mx_EventTile_readAvatars {
         top: -10px;
-    }
-
-    .mx_EventTile:not([data-layout="bubble"]).mx_EventTile_info .mx_EventTile_line {
-        padding-left: 36px;
-    }
-
-    .mx_EventTile:not([data-layout="bubble"]).mx_EventTile_info .mx_EventTile_avatar {
-        left: 18px;
     }
 
     .mx_WhoIsTypingTile {
