--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -97,8 +97,16 @@ limitations under the License.
         }
     }
 
-    .mx_GroupLayout .mx_EventTile > .mx_DisambiguatedProfile {
-        margin-left: 36px;
+    .mx_GroupLayout {
+        .mx_EventTile {
+            > .mx_DisambiguatedProfile {
+                margin-left: 36px;
+            }
+
+            .mx_EventTile_line {
+                padding-bottom: 8px;
+            }
+        }
     }
 
     .mx_CallEvent_wrapper {
@@ -112,10 +120,6 @@ limitations under the License.
     .mx_GenericEventListSummary:not([data-layout=bubble]) .mx_EventTile_line,
     .mx_GenericEventListSummary:not([data-layout=bubble]) > .mx_GenericEventListSummary_unstyledList > .mx_EventTile_info .mx_EventTile_avatar ~ .mx_EventTile_line {
         padding-left: 36px;
-    }
-
-    .mx_GroupLayout .mx_EventTile .mx_EventTile_line {
-        padding-bottom: 8px;
     }
 
     .mx_EventTile_readAvatars {
