Use text-align: justify
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/audio_messages/_AudioPlayer.scss
+++ b/res/css/views/audio_messages/_AudioPlayer.scss
@@ -59,8 +59,8 @@ limitations under the License.
 
         .mx_Clock {
             min-width: $font-42px; // for flexbox
-            padding-left: 4px; // isolate from seek bar
-            text-align: right;
+            padding-left: $spacing-4; // isolate from seek bar
+            text-align: justify;
             white-space: nowrap;
         }
     }
