--- a/res/css/views/dialogs/_RegistrationEmailPromptDialog.scss
+++ b/res/css/views/dialogs/_RegistrationEmailPromptDialog.scss
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-.mx_RegistrationEmailPromptDialog {
+#mx_RegistrationEmailPromptDialog {
     width: 417px;
 
     .mx_Dialog_content {
