Thread list: Align the reply summary, avatar, and the content
.mx_ThreadInfo has already adopted flexbox to align elements

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -830,8 +830,7 @@ $threadInfoLineHeight: calc(2 * $font-12px);
 }
 
 .mx_ThreadInfo_avatar {
-    float: left;
-    margin-right: 8px;
+    margin-inline-end: $spacing-8;
 }
 
 .mx_ThreadInfo_threads-amount {
