--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -256,7 +256,9 @@ limitations under the License.
 }
 
 .mx_ThreadPanel_replies {
-    margin-top: 8px;
+    margin-top: $spacing-8;
+    display: flex;
+    align-items: center;
 }
 
 .mx_ThreadPanel_repliesSummary {
@@ -276,8 +278,7 @@ limitations under the License.
 
     color: $secondary-content;
     font-weight: 600;
-    float: left;
-    margin-right: 12px;
+    margin-inline-end: $spacing-12;
     font-size: $font-12px;
 }
 
