--- a/res/css/views/rooms/_GroupLayout.scss
+++ b/res/css/views/rooms/_GroupLayout.scss
@@ -19,25 +19,29 @@ $left-gutter: 64px;
 
 .mx_GroupLayout {
     .mx_EventTile {
-        > .mx_DisambiguatedProfile {
-            line-height: $font-20px;
-            margin-left: $left-gutter;
-        }
-
         > .mx_EventTile_avatar {
             position: absolute;
             z-index: 9;
         }
 
-        .mx_MessageTimestamp {
-            position: absolute;
-            width: $MessageTimestamp_width;
-        }
-
-        .mx_EventTile_line, .mx_EventTile_reply {
+        .mx_EventTile_line,
+        .mx_EventTile_reply {
             padding-top: 1px;
             padding-bottom: 3px;
             line-height: $font-22px;
+        }
+
+        // See: _EventTile.scss
+        &:not([data-shape="ThreadsList"]) {
+            .mx_MessageTimestamp {
+                position: absolute;
+                width: $MessageTimestamp_width;
+            }
+
+            > .mx_DisambiguatedProfile {
+                line-height: $font-20px;
+                margin-left: $left-gutter;
+            }
         }
     }
 }
