Thread list: MessageActionBar
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -949,6 +949,11 @@ $threadInfoLineHeight: calc(2 * $font-12px);
         max-width: 80px;
         width: auto;
     }
+
+    .mx_MessageActionBar {
+        right: 0;
+        top: -36px; // 2px above EventTile
+    }
 }
 
 .mx_ThreadView {
