Thread Timeline: Right margin
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -833,13 +833,15 @@ $threadInfoLineHeight: calc(2 * $font-12px);
 
 .mx_GroupLayout {
     &[data-scrollbar=true] {
-        .mx_EventTile[data-shape=ThreadsList] {
+        .mx_EventTile[data-shape=ThreadsList],
+        .mx_RoomView_MessageList {
             margin-inline-end: 0;
         }
     }
 
     &[data-scrollbar=false] {
-        .mx_EventTile[data-shape=ThreadsList] {
+        .mx_EventTile[data-shape=ThreadsList],
+        .mx_RoomView_MessageList {
             margin-inline-end: $spacing-8;
         }
     }
