Thread list: Right margin
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -840,7 +840,10 @@ $threadInfoLineHeight: calc(2 * $font-12px);
     }
 
     &[data-scrollbar=false] {
-        .mx_EventTile[data-shape=ThreadsList],
+        .mx_EventTile[data-shape=ThreadsList] {
+            margin-inline-end: 0;
+        }
+
         .mx_RoomView_MessageList {
             margin-inline-end: $spacing-8;
         }
